--- a/cookies/styles.css
+++ b/cookies/styles.css
@@ -1,13 +1,13 @@
 .cookie-banner {
     position: fixed;
-    bottom: 0; /* Start at the bottom of the viewport */
+    bottom: 0; 
     left: 0;
     width: 100%;
     background-color: #333;
     color: #fff;
     padding: 10px;
     text-align: center;
-    transition: bottom 0.5s ease-in-out; /* Add a smooth transition effect */
+    transition: bottom 0.5s ease-in-out;
 }
 
 .cookie-banner p {
